# entracte

./: .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: docker-release.yml
app/: config.py  db.py  main.py  models.py  version.py
app/breaks/: heuristic.py
app/notifications/: base.py  dispatcher.py  gotify.py  telegram.py  vapid.py  webpush.py
app/plex/: client.py  watcher.py
app/routes/: api.py  dashboard.py  push.py  settings.py
app/static/: app.js  sw.js
app/templates/: _chapter_timeline.html  base.html  dashboard.html  settings.html
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_break_duration_window.py  0003_autopause.py  0004_break_segments.py
prompts/: 01_init.txt  02_test_settings.txt  03_add_favicon.txt  04_add_github_workflow.txt  05_db_migrations.txt  06_auto_pause.txt  06_configure_duration.txt  07_multi_break_resume.txt  08_versioning.txt  09_github_release.txt  10_min_duration_threshold.txt  11_collect_prompts_and_commit.txt
tests/: conftest.py  test_break_heuristic.py  test_notifiers.py  test_plex_client.py  test_version.py  test_watcher_autopause.py  test_watcher_notify.py
